[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/SelectionScene/SelectionScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/temp_peter/Background1.jpg" type="Texture" id=2]
[ext_resource path="res://assets/Characters/CharacterArt/default.jpg" type="Texture" id=3]

[node name="Screen" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 4.25721, 3.85714 )
texture = ExtResource( 2 )

[node name="CharacterArt" type="Sprite" parent="."]
position = Vector2( 1554, 326 )
texture = ExtResource( 3 )

[node name="Character1" type="Button" parent="."]
margin_left = 250.0
margin_top = 850.0
margin_right = 325.0
margin_bottom = 880.0
rect_scale = Vector2( 2, 2 )
text = "Luke"

[node name="Character2" type="Button" parent="."]
margin_left = 650.0
margin_top = 850.0
margin_right = 725.0
margin_bottom = 880.0
rect_scale = Vector2( 2, 2 )
text = "Matthew"

[node name="Character3" type="Button" parent="."]
margin_left = 1050.0
margin_top = 850.0
margin_right = 1125.0
margin_bottom = 880.0
rect_scale = Vector2( 2, 2 )
text = "Evan"

[node name="Name" type="RichTextLabel" parent="."]
margin_left = 370.0
margin_top = 243.0
margin_right = 470.0
margin_bottom = 293.0
rect_scale = Vector2( 4.5, 4.5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="Health" type="Label" parent="."]
margin_left = 370.0
margin_top = 374.0
margin_right = 410.0
margin_bottom = 388.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Gold" type="Label" parent="."]
margin_left = 370.0
margin_top = 406.0
margin_right = 410.0
margin_bottom = 420.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Trait" type="Label" parent="."]
margin_left = 370.0
margin_top = 338.0
margin_right = 470.0
margin_bottom = 352.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="DeckViewer" type="Button" parent="."]
margin_left = 1506.0
margin_top = 614.0
margin_right = 1593.0
margin_bottom = 634.0
rect_scale = Vector2( 2, 2 )
text = "DeckViewer"

[node name="Start" type="Button" parent="."]
margin_left = 1450.0
margin_top = 850.0
margin_right = 1600.0
margin_bottom = 880.0
rect_scale = Vector2( 2, 2 )
text = "Start"

[connection signal="pressed" from="Character1" to="." method="_on_Character1_pressed"]
[connection signal="pressed" from="Character2" to="." method="_on_Character2_pressed"]
[connection signal="pressed" from="Character3" to="." method="_on_Character3_pressed"]
[connection signal="pressed" from="DeckViewer" to="." method="_on_DeckViewer_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
